--- a/res/layout/testinggps.xml
+++ b/res/layout/testinggps.xml
@@ -1,22 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal|center_vertical"
-    android:orientation="vertical" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".Locate" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="87dp"
         android:text="GPS Coords:"
         android:textSize="35sp" />
 
-    <Coords
+    <TextView
         android:id="@+id/Coords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="36dp"
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textSize="35sp" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Coords"
+        android:layout_marginTop="81dp"
+        android:layout_toRightOf="@+id/Coords"
+        android:text="Refresh" />
+
+</RelativeLayout>
