--- a/res/layout/instagram.xml
+++ b/res/layout/instagram.xml
@@ -12,6 +12,7 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/hello_world"
         android:src="@drawable/ic_launcher" />
 
     <TextView
