--- a/res/layout/testinggps.xml
+++ b/res/layout/testinggps.xml
@@ -33,9 +33,10 @@
         android:id="@+id/refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/Coords"
-        android:layout_marginTop="81dp"
-        android:layout_toRightOf="@+id/Coords"
+        android:layout_marginLeft="85dp"
+        android:layout_marginTop="105dp"
         android:text="Refresh" />
 
 </RelativeLayout>
