--- a/res/layout/instagram.xml
+++ b/res/layout/instagram.xml
@@ -1,26 +1,40 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
+<!-- xmlns:tools="http://schemas.android.com/tools" -->
+<!-- android:layout_width="wrap_content" -->
+<!-- android:layout_height="wrap_content" -->
+<!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
+<!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
+<!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
+<!-- android:paddingTop="@dimen/activity_vertical_margin" -->
+<!-- tools:context=".MainActivity" > -->
+
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/grid"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:columnCount="3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:rowCount="9" >
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:contentDescription="@string/hello_world"
-        android:src="@drawable/ic_launcher" />
+</GridLayout> <!-- <ImageView -->
+<!-- android:id="@+id/image" -->
+<!-- android:layout_width="300dp" -->
+<!-- android:layout_height="300dp" -->
+<!-- android:contentDescription="@string/hello_world" -->
+<!-- android:src="@drawable/ic_launcher" /> -->
 
-    <TextView
-        android:id="@+id/main_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/instagram" />
 
-</RelativeLayout>
+<!-- <TextView -->
+<!-- android:id="@+id/main_text" -->
+<!-- android:layout_width="wrap_content" -->
+<!-- android:layout_height="wrap_content" -->
+<!-- android:layout_alignParentBottom="true" -->
+<!-- android:layout_alignParentRight="true" -->
+<!-- android:text="@string/instagram" /> -->
+
+
+<!-- </RelativeLayout> -->
