--- a/res/layout/instagram.xml
+++ b/res/layout/instagram.xml
@@ -1,39 +1,48 @@
-<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
-<!-- xmlns:tools="http://schemas.android.com/tools" -->
-<!-- android:layout_width="wrap_content" -->
-<!-- android:layout_height="wrap_content" -->
-<!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
-<!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
-<!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
-<!-- android:paddingTop="@dimen/activity_vertical_margin" -->
-<!-- tools:context=".MainActivity" > -->
-
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="4"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:baselineAligned="false"
+    android:orientation="horizontal" >
 
-</GridLayout> <!-- <ImageView -->
-<!-- android:id="@+id/image" -->
-<!-- android:layout_width="300dp" -->
-<!-- android:layout_height="300dp" -->
-<!-- android:contentDescription="@string/hello_world" -->
-<!-- android:src="@drawable/ic_launcher" /> -->
+    <GridLayout
+        android:id="@+id/grid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
+    </GridLayout>
 
+    <RelativeLayout
+        android:id="@+id/rel"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="15dp"
+        android:gravity="bottom" >
 
-<!-- <TextView -->
-<!-- android:id="@+id/main_text" -->
-<!-- android:layout_width="wrap_content" -->
-<!-- android:layout_height="wrap_content" -->
-<!-- android:layout_alignParentBottom="true" -->
-<!-- android:layout_alignParentRight="true" -->
-<!-- android:text="@string/instagram" /> -->
+        <Button
+            android:id="@+id/nextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="40dp" />
 
+        <Button
+            android:id="@+id/refButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="40dp" />
 
-<!-- </RelativeLayout> -->
+    </RelativeLayout>
+
+</RelativeLayout>
